--- a/style.scss
+++ b/style.scss
@@ -127,7 +127,7 @@ img {
 }
 ::selection {
   color: $black;
-  background: $Gray;
+  background: $gray;
 }
 
 // Nicolas Gallagher's micro clearfix hack
