--- a/style.scss
+++ b/style.scss
@@ -117,8 +117,8 @@ img {
 
 // Fixes date
 .date {
-  font-style: italic;
-  color: #888;
+  font-size: 15px;
+  color: #6666AA;
 }
 
 // Specify the color of the selection
