--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@ layout: default
   <script>
   var gitment = new Gitment({
       owner: '网球玩的人',
-      repo: 'https://wqwdr.github.io/report/',
+      repo: 'https://wqwdr.github.io/',
       oauth: {
           client_id: 'e2c88e199f4e5d41cfd2',
           client_secret: 'd2acd7f6e07b8d7203348d84c34c6289c2dfbc92',
