--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   <script src="https://imsun.github.io/gitment/dist/gitment.browser.js"></script>
   <script>
   var gitment = new Gitment({
-      owner: '网球玩的人',
+      owner: 'wqwdr',
       repo: 'https://wqwdr.github.io/',
       oauth: {
           client_id: 'e2c88e199f4e5d41cfd2',
