--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ layout: default
   <script src="https://jjeejj.github.io/js/gitment.js"></script>
   <script>
   var gitment = new Gitment({
-    id: '\{\{ page.date \}\}', #对应文章评论所形成issue的label，默认为文章的url,为了防止url过长导致评论初始化失败，这里设置label为文章yaml中的时间。这一项无需更改，\为转义字符，应用时需要删掉
+    id: '{{ page.date }}', #对应文章评论所形成issue的label，默认为文章的url,为了防止url过长导致评论初始化失败，这里设置label为文章yaml中的时间。这一项无需更改
     owner: 'wqwdr', #Github Pages博客所在的github账户名
     repo: 'wqwdr.github.io', #Github Pages博客所在仓库名
     oauth: {
