--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,6 +5,12 @@ layout: default
 <article class="page">
 
   <h1>{{ page.title }}</h1>
+  <div class="date">
+    {{ page.date | date: "%Y.%m.%d" }}
+  </div>
+  <div class="date">
+    {{ page.date | date: "%Y.%m.%d" }}
+  </div>
 
   <div class="entry">
     {{ content }}
