--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,9 @@
         </footer>
       </div>
     </div>
+    <div class="date">
+    {{ page.date | date: "%Y.%m.%d" }}
+  </div>
 
     {% include analytics.html %}
   </body>
