--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,15 +4,7 @@ layout: default
 
 <article class="page">
 
-  <h1>{{ page.title }}</h1>
-  <div class="date">
-    {{ page.date | date: "%Y.%m.%d" }}
-  </div>
-  <div class="date">
-    {{ page.date | date: "%Y.%m.%d" }}
-  </div>
-
-  <div class="entry">
-    {{ content }}
-  </div>
+  //<div class="entry">
+  //  {{ content }}
+  //</div>
 </article>
