--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="page">
 
-  //<div class="entry">
-  //  {{ content }}
-  //</div>
+  <div class="entry">
+    {{ content }}
+  </div>
 </article>
